--- a/style.css
+++ b/style.css
@@ -1,3 +1,288 @@
-body {
-	background: #aaa;
+html, body {
+  margin: auto;
+  padding: auto;
+  font: normal sans-serif;
+  background-color: #f7f7f9;
+}
+
+ul a {
+  color: white;
+  text-align: center;
+  padding: 15px 30px;
+  text-decoration: none;
+  float: right;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: small;
+}
+
+.join-now {
+  float: left;
+}
+
+ul a:hover {
+  opacity: 0.9;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+  background-image: url("https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"); 
+  background-color: #cccccc; /* Used if the image is unavailable */
+  height: 650px; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+
+.section-container-1 {
+  margin: auto;
+}
+
+.section-container-1 h1 {
+  padding: 1.5em;
+  text-align: center;
+  color: white;
+}
+
+ .section-container-1 .btn {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #275fba;
+  color: white;
+  height: 4em;
+  width: 20em;
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+main .btn:hover {
+  opacity: 0.9;
+}
+
+#services-how {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 1em;
+    margin: 1em;
+}
+
+.grid-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.grid-container h5 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.grid-container p {
+    padding: 0.5rem;
+}
+
+section {
+  display: flex;
+  background-image: url("https://images.pexels.com/photos/965345/pexels-photo-965345.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+  background-color: #cccccc; /* Used if the image is unavailable */
+  height: 500px; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.section-container {
+  margin: auto;
+  padding: auto;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.section-container h2 {
+  padding: 1em;
+  text-align: center;
+}
+
+ .section-container .btn {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #275fba;
+  color: white;
+  height: 4em;
+  width: 20em;
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+section .btn:hover {
+  opacity: 0.9;
+}
+
+article {
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: auto;
+}
+
+.box-1, .box-2, .box-3, .box-4 {
+  margin: 1em;
+  max-width: 300px;
+  height: auto;
+}
+
+.box-1 img, .box-2 img, .box-3 img, .box-4 img {
+    position: relative;
+    width:  300px;
+    height: 250px;
+    background-position: 50% 50%;
+    background-repeat:   no-repeat;
+    background-size:     cover;
+}
+
+article h5 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+article p{
+    padding: 0.5rem;
+}
+
+.info {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.button {
+    margin: 4rem;
+    background-color: #2e71dd;
+    color: white;
+    width: 20em;
+    height: 4em;
+    border-radius: 5px;
+}
+
+.button:hover {
+    opacity: 0.9;
+}
+
+
+
+.footer-distributed {
+  background-color: #292c2f;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
+}
+
+.footer-distributed .footer-left p {
+  color: #8f9296;
+  font-size: 14px;
+  margin: 0;
+}
+/* Footer links */
+
+.footer-distributed p.footer-links {
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffffff;
+  margin: 0 0 10px;
+  padding: 0;
+  transition: ease .25s;
+}
+
+.footer-distributed p.footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+  transition: ease .25s;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "·";
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+  transition:all .25s;
+}
+
+.footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+
+.footer-distributed p.footer-links a:hover{text-decoration:underline;}
+
+/* Media Queries */
+
+@media (max-width: 600px) {
+  .footer-distributed .footer-left, .footer-distributed .footer-right {
+    text-align: center;
+  }
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
 }
